# 2017bot

./: .classpath  .gitignore  .project  .tags1  CMakeLists.txt  README.md  build.gradle  build.properties  build.xml  crontab  crontab.in  gdb.exe.stackdump  plan.txt  raw-data.txt  sysProps.xml
config/: camera-client.ini
include/: .PapasVision.h.swo  .PapasVision.h.swp  Config.h  Connection.h  Message.h  PapasVision.h  RemoteTransmitter.h  TransmissionBuffer.h
lib/: .classpath  .project  User_Libraries.properties
src/: Config.cpp  Connection.cpp  Message.cpp  PapasVision.cpp  RemoteTransmitter.cpp  TransmissionBuffer.cpp  main.cpp
src/main/java/org/usfirst/frc/team1759/robot/: AbstractCurveFitter.java  LinearRegressionCurveFitter.java  OI.java  PapasData.java  PortAssigner.java  Robot.java  RobotMap.java  Sensors.java  ServerRunnable.java  Shooter.java  XMLParser.java  XMLParserException.java
src/main/java/org/usfirst/frc/team1759/robot/commands/: AutoAimCommand.java  AutoAimCommandImpl.java  AutoFire.java  AutoFireCommand.java  AutonomousPhase.java  AutonomousPhaseCommand.java  CreateGenerateControllersCommand.java  ExampleCommand.java  FeedBallsCommand.java  GearDeliveryCommand.java  GyroDrive.java  GyroDriveCommand.java  ManualDriveCommand.java  ManualFireCommand.java  MecanumDriveCommand  MecanumDriveCommand.java  NoGyroDrive.java  deliverGear.java
src/main/java/org/usfirst/frc/team1759/robot/subsystems/: AutonomousDriveSubSystem.java  BallIntake.java  BallIntakeSubSystem.java  ExampleSubsystem.java  GearDropper.java  GearDropperSubSystem.java  MecanumDriveSubSystem.java  MecanumDriveSubsystem  MecanumDriveSubsystem.java  ShooterSubSystem.java
src/main/java/org/usfirst/frc/team1759/terminal/: AbstractCurveFitter.java  LinearRegressionCurveFitter.java  TerminalTest.java
src/org/usfirst/frc/team1759/robot/: LinearRegressionCurveFitter.java  OI.java  PapasData.java  Robot.java  RobotMap.java  ServerRunnable.java
src/org/usfirst/frc/team1759/robot/commands/: AutoAimBoilerCommand.java  AutonomousPhaseCommand.java  DriveCommand.java  ExampleCommand.java
src/org/usfirst/frc/team1759/robot/subsystems/: BallIntakeSubSystem.java  MecanumDriveSubSystem.java
src/org/usfirst/frc/team1759/terminal/: TerminalTest.java
